Version 0.1.4 - Java9 and fixes - fix Unsafe redirection / JVM restrictions for Java9+ (Help Sodium with Java9+) - ask Netty to try to use Unsafe if possible (Optimisation) - added string API call redirections to Faster apache ones - automatically detect if ModUpdater should do strict version checking (Fix #7) - Add more modularity over tweaks/optimisations + improved configuration file management